--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 atomicwrites==1.3.0
 attrs==19.3.0
 colorama==0.4.3
+coverage==5.0.4
 importlib-metadata==1.6.0
 more-itertools==8.2.0
 numpy==1.18.2
