--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ atomicwrites==1.3.0
 attrs==19.3.0
 colorama==0.4.3
 coverage==5.0.4
+Cython==0.29.17
 importlib-metadata==1.6.0
 more-itertools==8.2.0
 numpy==1.18.2
@@ -10,6 +11,7 @@ pluggy==0.13.1
 py==1.8.1
 pyparsing==2.4.6
 pytest==5.4.1
+scipy==1.4.1
 six==1.14.0
 wcwidth==0.1.9
 zipp==3.1.0
