--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
-atomicwrites==1.3.0
+atomicwrites==1.4.0
 attrs==19.3.0
 colorama==0.4.3
-coverage==5.0.4
-Cython==0.29.17
+coverage==5.1
+Cython==0.29.18
+cython-environment==0.0.0
 importlib-metadata==1.6.0
-more-itertools==8.2.0
-numpy==1.18.2
+more-itertools==8.3.0
+numpy==1.18.4
 packaging==20.3
 pluggy==0.13.1
 py==1.8.1
-pyparsing==2.4.6
-pytest==5.4.1
+pyparsing==2.4.7
+pytest==5.4.2
 scipy==1.4.1
 six==1.14.0
 wcwidth==0.1.9
