--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,18 @@ atomicwrites==1.4.0
 attrs==19.3.0
 colorama==0.4.3
 coverage==5.1
-Cython==0.29.18
-cython-environment==0.0.0
+Cython==0.29.19
+grgym==0.0.0
 importlib-metadata==1.6.0
 more-itertools==8.3.0
 numpy==1.18.4
-packaging==20.3
+packaging==20.4
 pluggy==0.13.1
 py==1.8.1
 pyparsing==2.4.7
 pytest==5.4.2
+pytest-cython==0.1.0
+pytest-runner==5.2
 scipy==1.4.1
 six==1.14.0
 wcwidth==0.1.9
