--- a/.travis.yml
+++ b/.travis.yml
@@ -24,19 +24,13 @@ include:
 
 install:
   - pip3 install --upgrade pip
-  - pip install --user -r requirements.txt
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then pip install -r requirements.txt; fi
+  - if [ "$TRAVIS_OS_NAME" != "linux" ]; then pip install --user -r requirements.txt; fi
 
 # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
 # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
-before_script:
-  - python3 setup.py build_ext --inplace
-  - python setup.py build_ext --inplace
-  - python3 setup.py install
-  - python setup.py install
-  - python3 compile_tests.py build_ext --inplace
-  - python compile_tests.py build_ext --inplace
-
-
-
 script:
-  pytest
+  - python3 setup.py build_ext --inplace || python setup.py build_ext --inplace
+  - python3 setup.py install || python setup.py install
+  - python3 compile_tests.py build_ext --inplace || python compile_tests.py build_ext --inplace
+  - pytest
