--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ jobs:
   include:
     - name: "Python on Linux"
       python:  # this works for Linux but is ignored on macOS or Windows
-        - "3.5"
         - "3.6"
         - "3.7"
         - "3.8"
@@ -24,8 +23,7 @@ jobs:
 
 install:
   - pip3 install --upgrade pip
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then pip install -r requirements.txt; fi
-  - if [ "$TRAVIS_OS_NAME" != "linux" ]; then pip install --user -r requirements.txt; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then pip install -r requirements.txt; else pip install --user -r requirements.txt; fi
 
 # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
 # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
@@ -33,4 +31,4 @@ script:
   - python3 setup.py build_ext --inplace || python setup.py build_ext --inplace
   - python3 setup.py install || python setup.py install
   - python3 compile_tests.py build_ext --inplace || python compile_tests.py build_ext --inplace
-  - pytest
+  - python3 -m pytest || python -m pytest
