--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,11 @@ jobs:
       python:  # this works for Linux but is ignored on macOS or Windows
         - "3.6"
     - name: "Python 3.7 on Linux"
-        - python:
-            - "3.7"
+      python:
+        - "3.7"
     - name: "Python 3.8 on Linux"
-        - python:
-            - "3.8"
+      python:
+        - "3.8"
     - name: "Python 3.7.4 on macOS"
       os: osx
       osx_image: xcode11.2  # Python 3.7.4 running on macOS 10.14.4
