--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,15 @@ jobs:
       os: osx
       osx_image: xcode11.2  # Python 3.7.4 running on macOS 10.14.4
       language: shell       # 'language: python' is an error on Travis CI macOS
+      env:
+        - PATH=/Users/travis/Library/Python/3.7/bin:$PATH
     - name: "Python 3.8.0 on Windows"
       os: windows           # Windows 10.0.17134 N/A Build 17134
       language: shell       # 'language: python' is an error on Travis CI Windows
       before_install:
         - choco install python --version 3.8.0
         - python -m pip install --upgrade pip
-      env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
+      env: PATH=/c/Users/travis/AppData/Roaming/Python/Python38/Scripts:/c/Python38:/c/Python38/Scripts:$PATH
 
 install:
   - pip3 install --upgrade pip
@@ -39,4 +41,7 @@ before_script:
 # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
 # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
 script:
-  - python3 -m pytest || python -m pytest
+  - coverage run -m pytest tests/
+
+after_success:
+  bash <(curl -s https://codecov.io/bash)
