--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ install:
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then pip install -r requirements.txt; else pip install --user -r requirements.txt; fi
 
 before_script:
-  - python3 setup.py build_ext --inplace || python setup.py build_ext --inplace
+  - python3 setup.py build_ext --inplace --define CYTHON_TRACE || python setup.py build_ext --define CYTHON_TRACE --inplace
   - python3 setup.py install || python setup.py install
   - python3 compile_tests.py build_ext --inplace || python compile_tests.py build_ext --inplace
 
