--- a/.coveragerc
+++ b/.coveragerc
@@ -1,3 +1,9 @@
 [run]
 plugins = Cython.Coverage
 source = GRGym
+
+[report]
+omit =
+    *__init__.py
+
+# exclude_lines doesn't work with .pyx files.
