--- a/.travis.yml
+++ b/.travis.yml
@@ -34,14 +34,13 @@ install:
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then pip install -r requirements.txt; else pip install --user -r requirements.txt; fi
 
 before_script:
-  - python3 setup.py build_ext --inplace --define CYTHON_TRACE || python setup.py build_ext --define CYTHON_TRACE --inplace
-  - python3 setup.py install || python setup.py install
+  - python3 setup.py build_ext --inplace --define CYTHON_TRACE_NOGIL || python setup.py build_ext --define CYTHON_TRACE_NOGIL --inplace
   - python3 compile_tests.py build_ext --inplace || python compile_tests.py build_ext --inplace
 
 # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
 # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
 script:
-  - coverage run -m pytest tests/
+  - coverage run -m pytest
 
 after_success:
   bash <(curl -s https://codecov.io/bash)
