--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 atomicwrites==1.4.0
 attrs==19.3.0
 colorama==0.4.3
-coverage==5.1
+coverage<5.0
 Cython==0.29.19
 importlib-metadata==1.6.0
 more-itertools==8.3.0
